--- a/terminal.html
+++ b/terminal.html
@@ -181,9 +181,11 @@
               Computer Engineering (2023-Present)<br><br>
               
               <span class='text-yellow-300'>Certifications:</span><br>
-              - eJPT (eLearnSecurity Junior Penetration Tester)<br>
-              - TryHackMe Top 1%<br>
-              - HTB Certified Bug Bounty Hunter<br>
+              - Certificate Red Team Analyst (CRTA)
+              - Fortinet Certified Associate Cybersecurity (FCAC)<br>
+              - HCS One Month Free Internship Certificate<br>
+              - İntern Intelligence Certificate<br>
+              - C3SA<br>
             </div>
           `;
         }
