--- a/certificates.html
+++ b/certificates.html
@@ -454,7 +454,8 @@
 
     <!-- Sağ Panel (Certificates) -->
     <main class="main-content">
-      <h1 class="section-title text-red-400">My Certificates</h1>
+      <h1 class="section-title text-red-400 ml-10 md:text-right">Certificates</h1>
+
       
       <div class="certificates-grid">
         <!-- HCS Certificate -->
