--- a/projects.html
+++ b/projects.html
@@ -436,7 +436,8 @@
 
     <!-- Sağ Panel (Projects) -->
     <main class="main-content">
-      <h1 class="section-title text-red-400">My Projects</h1>
+      <h1 class="section-title text-red-400 ml-10">Projects</h1>
+
       
       <div class="projects-grid">
         <!-- V CTF Challenge -->
