--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo">RUSLAN'S<span class="glow-text"> PORTFOLIO</span></a>
+            <a href="#" <span class="glow-text">#PORTFOLIO</span></a>
             <button class="mobile-menu-btn">☰</button>
             <div class="nav-links">
                 <a href="#about">About</a>
