--- a/index.html
+++ b/index.html
@@ -525,10 +525,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <!-- Placeholder for image -->
-                    <div style="width: 100%; height: 300px; background: rgba(255, 0, 60, 0.05); border: 1px dashed var(--neon-red); display: flex; align-items: center; justify-content: center; color: var(--text-gray);">
-                        [Profile Image]
-                    </div>
+                    <img src="images/my_picture.jpeg" alt="Profile Image" style="width: 100%; height: 300px; object-fit: cover; border: 1px solid var(--neon-red); border-radius: 8px;">
                 </div>
             </div>
         </section>
