--- a/index.html
+++ b/index.html
@@ -528,7 +528,12 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="images/my_picture.jpeg" alt="Profile Image" style="width: 100%; height: 300px; object-fit: cover; border: 1px solid var(--neon-red); border-radius: 8px;">
+                    <img src="images/profile_hacker.jpeg"
+                         alt="Hacker Style Profile"
+                         style="width: 100%; height: 300px; object-fit: cover;
+                                border: 1px solid var(--neon-blue);
+                                border-radius: 8px;
+                                box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);">
                 </div>
             </div>
         </section>
