--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="images/profile_hacker.jpeg"
+                    <img src="images/my_picture.jpeg"
                          alt="Hacker Style Profile"
                          style="width: 100%; height: 300px; object-fit: cover;
                                 border: 1px solid var(--neon-blue);
