--- a/index.html
+++ b/index.html
@@ -527,14 +527,10 @@
                         <span class="skill-tag">CTF Challenges</span>
                     </div>
                 </div>
-                <div class="about-image">
-                    <img src="images/my_picture.jpeg"
-                         alt="Hacker Style Profile"
-                         style="width: 100%; height: 300px; object-fit: cover;
-                                border: 1px solid var(--neon-blue);
-                                border-radius: 8px;
-                                box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);">
+                <div style="width: 100%; height: 300px; background: rgba(255, 0, 60, 0.05); border: 1px dashed var(--neon-red); display: flex; align-items: center; justify-content: center; color: var(--text-gray);">
+                    [Profile Image]
                 </div>
+
             </div>
         </section>
 
