--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">R.Ə</span>
+                <span class="logo-text">Portfolio</span>
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link" data-translate="nav-home">Ana Səhifə</a>
