--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <p>&copy; 2025 Ruslan Əmrahov. <span data-translate="footer-rights">Bütün hüquqlar qorunur.</span></p>
                 </div>
                 <div class="footer-right">
-                    <p data-translate="footer-made">❤️ ilə hazırlanmışdır</p>
+                    <p data-translate="footer-made"></p>
                 </div>
             </div>
         </div>
