--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
 
     <!-- Navigation -->
     <nav id="mainNav">
-        <div class="logo">R.AMRAHOV</div>
+        <div class="logo">Portfolio</div>
         <div class="nav-links">
             <a href="#about">Haqqımda</a>
             <a href="#experience">Təcrübə</a>
@@ -1128,11 +1128,7 @@
             <h1>RUSLAN ƏMRAHOV</h1>
             <div class="hero-subtitle">Cybersecurity Analyst | Penetration Tester | Red Teamer</div>
             <div class="hero-roles">Baku, Azerbaijan</div>
-            
-            <p class="hero-description">
-                Kiber təhlükəsizlik üzrə ixtisaslaşmışam və Red Teaming sahəsində real təcrübəyə sahibəm. 
-                Docker, OSINT, Web Application Security, ELK Stack və Python üzrə praktiki biliklərə malikəm.
-            </p>
+
             
             <div class="hero-socials">
                 <a href="mailto:ruslanemrahov001@gmail.com" class="social-icon-btn" title="Email">
